# skypro_dz_28

./: db.sqlite3  manage.py  pyproject.toml  utils.py
ads/: models.py  urls.py  views.py
datasets/: ad.json  category.json  location.json  user.json
skypro_dz28/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  urls.py  views.py
