[tool.poetry]
name = "skypro-dz-28"
version = "0.1.0"
description = ""
authors = ["Maksim Gostev <teranys1986@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_dz_28"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
